Fix flex issue on IE11

--- a/assets/css/sass/_style.sass
+++ b/assets/css/sass/_style.sass
@@ -12,6 +12,7 @@ body
     @include flex-direction(column)
     > .content
         @include flex(1)
+        -ms-flex-preferred-size: auto //IE11 hack
 .container 
     max-width: 900px
 .container-full 
